--- a/src/console/notebooks/base-notebook-idnt.ipynb
+++ b/src/console/notebooks/base-notebook-idnt.ipynb
@@ -4,9 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Base Notebook\n",
+    "# Base Notebook \n",
     "\n",
-    "This notebook provide basic capabilities to interface with azure open ai. It uses `key` authentication to access the service.\n",
+    "This notebook provide basic capabilities to interface with azure open ai. It uses `identity` authentication to access the service.\n",
+    "\n",
     "It uses the Azure OpenAI SDK 2.1.0."
    ]
   },
@@ -27,8 +28,11 @@
    "outputs": [],
    "source": [
     "#r \"nuget: Azure.AI.OpenAI, 2.1.0\"\n",
+    "#r \"nuget: Azure.Identity, 1.8.0\"\n",
     "#r \"nuget: DotNetEnv, 2.5.0\"\n",
     "\n",
+    "\n",
+    "using Azure.Identity;\n",
     "using Azure;\n",
     "\n",
     "using DotNetEnv;\n",
@@ -61,18 +65,24 @@
    },
    "outputs": [],
    "source": [
+    "\n",
     "string _configurationFile = @\"../../../configuration/.env\";\n",
     "Env.Load(_configurationFile);\n",
-    "    \n",
-    "string oAiApiKey = Environment.GetEnvironmentVariable(\"AOAI_APIKEY\") ?? \"AOAI_APIKEY not found\";\n",
-    "string oAiEndpoint = Environment.GetEnvironmentVariable(\"AOAI_ENDPOINT\") ?? \"AOAI_ENDPOINT not found\";\n",
-    "string chatCompletionDeploymentName = Environment.GetEnvironmentVariable(\"CHATCOMPLETION_DEPLOYMENTNAME\") ?? \"CHATCOMPLETION_DEPLOYMENTNAME not found\";\n",
+    "\n",
+    "string oAiEndpoint = Environment.GetEnvironmentVariable(\"AOAI_ENDPOINT\") \n",
+    "    ?? \"AOAI_ENDPOINT not found\";\n",
+    "string chatCompletionDeploymentName = Environment.GetEnvironmentVariable(\"CHATCOMPLETION_DEPLOYMENTNAME\") \n",
+    "    ?? \"CHATCOMPLETION_DEPLOYMENTNAME not found\";\n",
     "string embeddingDeploymentName = Environment.GetEnvironmentVariable(\"EMBEDDING_DEPLOYMENTNAME\") ?? \"EMBEDDING_DEPLOYMENTNAME not found\";\n",
-    "    \n",
-    "AzureKeyCredential azureKeyCredential = new AzureKeyCredential(oAiApiKey);\n",
-    "AzureOpenAIClient openAIClient = new AzureOpenAIClient(new Uri(oAiEndpoint), azureKeyCredential);\n",
-    "    \n",
-    "Console.WriteLine($\"OpenAI Client created: {oAiEndpoint} with: {chatCompletionDeploymentName} and {embeddingDeploymentName} deployments\");"
+    "var credential = new DefaultAzureCredential();\n",
+    "\n",
+    "// Now create the client using your identity:\n",
+    "AzureOpenAIClient openAIClient = new AzureOpenAIClient(\n",
+    "    new Uri(oAiEndpoint),\n",
+    "    credential\n",
+    ");\n",
+    "\n",
+    "Console.WriteLine($\"OpenAI Client created with user identity at: {oAiEndpoint}, using deployment: {chatCompletionDeploymentName}\");"
    ]
   },
   {
