--- a/src/console/notebooks/base-notebook-idnt.ipynb
+++ b/src/console/notebooks/base-notebook-idnt.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Base Notebook \n",
+    "# Base Notebook - Identity Authentication\n",
     "\n",
     "This notebook provide basic capabilities to interface with azure open ai. It uses `identity` authentication to access the service.\n",
     "\n",
@@ -153,7 +153,7 @@
     "    ChatClient chatClient = _openAIClient.GetChatClient(chatCompletionDeploymentName);\n",
     "\n",
     "    ChatCompletionOptions chatComletionOptions = new ChatCompletionOptions(){\n",
-    "        MaxOutputTokenCount = 150,\n",
+    "        MaxOutputTokenCount = 450,\n",
     "        Temperature = 0.7f,\n",
     "        TopP = 1.0f,\n",
     "        FrequencyPenalty = 0.7f,\n",
@@ -214,6 +214,157 @@
     "\n",
     "// Print the result\n",
     "Console.WriteLine(resp);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Playing with transcript \n",
+    "\n",
+    "Few attempts to extract insights from the transcript."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "string extractQuestions = \n",
+    "@\"You are an advanced text-extraction assistant specialized in analyzing discussion transcripts. Your goal is to identify and extract all challenges mentioned in the conversation. A “challenge” can be any problem, difficulty, obstacle, or concern that participants raise.\n",
+    "\n",
+    "Instructions:\n",
+    "\t1.\tRead the entire transcript carefully. note that conversation text is within specific tags.(<v John Doe>I see you again.</v>)\n",
+    "\t2.\tIdentify each statement or passage that describes a challenge or difficulty encountered or anticipated by the participants.\n",
+    "\t3.\tSummarize these challenges in a concise, clear format (bullet points or numbered list).\n",
+    "\t4.\tFor each challenge:\n",
+    "\t•\tProvide a short description of what the challenge is.\n",
+    "\t•\t(Optional) If the transcript contains specific details (e.g., who raised the challenge, a brief quote, or context), include a concise snippet to illustrate it.\n",
+    "\t5.\tIf no challenges are mentioned, output “No challenges found.”\n",
+    "\n",
+    "Important:\n",
+    "\t•\tOnly include actual challenges stated or implied by the discussion.\n",
+    "\t•\tDo not reveal any internal reasoning steps or chain-of-thought.\n",
+    "\t•\tLimit your output to the final results—the list of challenges.\n",
+    "\n",
+    "Output:\n",
+    "    •\tA list of challenges extracted from the conversation.\n",
+    "     The JSON must have this structure:\n",
+    "{\n",
+    "  \"\"Challenge\"\": \"\"<A concise phrase describing the challenge>\"\",\n",
+    "  \"\"Summary\"\": \"\"<A detailed explanation summarizing the challenge>\"\"\n",
+    "}\n",
+    "    \";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#!csharp\n",
+    "using System;\n",
+    "using System.IO;\n",
+    "using System.Text.RegularExpressions;\n",
+    "\n",
+    "// Define the input file path (modify accordingly)\n",
+    "string filePath = \"Product Leaders Co-Pilot Pt 2.vtt\"; \n",
+    "\n",
+    "// Define the output file with \"_cl.vtt\" suffix\n",
+    "string outputFilePath = Path.Combine(\n",
+    "    Path.GetDirectoryName(filePath) ?? \"\",\n",
+    "    Path.GetFileNameWithoutExtension(filePath) + \"_cl\" + Path.GetExtension(filePath)\n",
+    ");\n",
+    "\n",
+    "Console.WriteLine($\"Processing: {filePath}\");\n",
+    "Console.WriteLine($\"Saving cleaned file to: {outputFilePath}\");\n",
+    "\n",
+    "// Read all lines from the file\n",
+    "var lines = File.ReadAllLines(filePath);\n",
+    "var cleanedLines = new List<string>();\n",
+    "\n",
+    "// Regex pattern to match speaker lines with `<v SpeakerName>Text</v>`\n",
+    "Regex speechPattern = new Regex(@\"<v\\s([^>]+)>(.*?)<\\/v>\", RegexOptions.Compiled);\n",
+    "\n",
+    "foreach (var line in lines)\n",
+    "{\n",
+    "    var match = speechPattern.Match(line);\n",
+    "    if (match.Success)\n",
+    "    {\n",
+    "        string speaker = match.Groups[1].Value.Trim();\n",
+    "        string text = match.Groups[2].Value.Trim();\n",
+    "        cleanedLines.Add($\"{speaker}: {text}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Write cleaned content to the new file\n",
+    "File.WriteAllLines(outputFilePath, cleanedLines);\n",
+    "\n",
+    "Console.WriteLine(\"Cleaning completed successfully!\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "string filePath = \"transcript1_cl.vtt\";\n",
+    "string content = File.ReadAllText(filePath);\n",
+    "var resp2 = await CallOpenAI(openAIClient, \n",
+    "    content,\n",
+    "    extractQuestions, true);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Console.WriteLine(resp2);"
    ]
   }
  ],
