--- a/src/console/notebooks/classify.ipynb
+++ b/src/console/notebooks/classify.ipynb
@@ -413,7 +413,7 @@
    "outputs": [],
    "source": [
     "// the classifications are already loaded\n",
-    "var feedbackJson = File.ReadAllText(\"adf.json\");\n",
+    "var feedbackJson = File.ReadAllText(\"aks.json\");\n",
     "var feedbackList = JsonSerializer.Deserialize<List<ProductLeaders.console.Models.FeedbackRecord>>(feedbackJson);"
    ]
   },
@@ -601,6 +601,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
