Moved raw_process notebook

--- a/src/console/notebooks/cic/raw_process.ipynb
+++ b/src/console/notebooks/cic/raw_process.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -30,12 +30,12 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "wdir = os.path.abspath('../../../')"
+    "wdir = os.path.abspath('../../../../')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,12 +84,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "env_vars = dotenv_values(f\"{wdir}/configuration/.env\")\n",
-    "notebooks_path = os.path.join(wdir, \"src/console/notebooks/\")\n",
+    "notebooks_path = os.path.join(wdir, \"src/console/notebooks/cic/\")\n",
     "\n",
     "csv_fpath = os.path.join(notebooks_path, \"input\", csv_fname)\n",
     "output_dir = os.path.join(notebooks_path, \"output\", os.path.splitext(os.path.basename(csv_fname))[0])\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
