Update raw_process notebook for embedding and similarity calculations

--- a/src/console/notebooks/cic/raw_process.ipynb
+++ b/src/console/notebooks/cic/raw_process.ipynb
@@ -18,17 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "reload_output_if_exists = True\n",
-    "self_classify = True"
+    "self_classify = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,12 +102,14 @@
     "from pydantic import BaseModel, Field\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import time"
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import time\n",
+    "from concurrent.futures import ThreadPoolExecutor, as_completed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +212,16 @@
     "        create_directory(os.path.dirname(fpath))\n",
     "\n",
     "    with open(fpath, 'w') as f:\n",
-    "        json.dump(data, f, indent=indent, cls=CustomEncoder)"
+    "        json.dump(data, f, indent=indent, cls=CustomEncoder)\n",
+    "        \n",
+    "\n",
+    "# OpenAI Helpers\n",
+    "def get_embedding(text: str):\n",
+    "    embedding_response = openai_client.embeddings.create(\n",
+    "        input=text,\n",
+    "        model=env_vars[\"EMBEDDING_DEPLOYMENTNAME\"]\n",
+    "    )\n",
+    "    return embedding_response.data[0].embedding"
    ]
   },
   {
@@ -222,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,27 +358,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = []\n",
     "\n",
-    "if reload_output_if_exists and os.path.exists(output_dir):\n",
-    "    data = json.load(open(os.path.join(output_dir, \"data.json\"), \"r\"))"
+    "if reload_output_if_exists and os.path.exists(os.path.join(output_dir)):\n",
+    "    for f in os.listdir(output_dir):\n",
+    "        if f.endswith(\".json\"):\n",
+    "            with open(os.path.join(output_dir, f), 'r') as file:\n",
+    "                data.append(json.load(file))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if len(data) > 0:\n",
+    "if len(data) == 0:    \n",
     "    try:\n",
-    "        chunk_iterator = pd.read_csv(csv_fpath, chunksize=500)\n",
+    "        chunk_iterator = pd.read_csv(csv_fpath, chunksize=10)\n",
     "        \n",
-    "        for i, df in enumerate(chunk_iterator):\n",
+    "        for i, df in enumerate(chunk_iterator):            \n",
     "            for j, row in df.iterrows():\n",
     "                attribution = [\n",
     "                    row[\"BrandAssigned\"],\n",
@@ -382,21 +396,27 @@
     "                    \"\" if row[\"Q089a_2\"] == \"#NULL!\" else \"ISV\",\n",
     "                    \"\" if (row[\"Q102a\"] == \"No\" or row[\"Q102a\"] == \"#NULL!\") else \"Startup\"\n",
     "                ]\n",
-    "                            \n",
-    "                data.append({\n",
+    "                \n",
+    "                dp = {\n",
     "                    \"response_id\": row[\"ResponseId\"],\n",
     "                    \"attribution\": \", \".join(attribution),\n",
-    "                    \"verbatim\": row[\"Q024b\"]\n",
-    "                })\n",
+    "                    \"verbatim\": str(row[\"Q024b\"]),\n",
+    "                }\n",
+    "                \n",
+    "                dp[\"embedding\"] = get_embedding(dp[\"verbatim\"])\n",
+    "                data.append(dp)\n",
+    "                \n",
+    "                create_json_file(os.path.join(output_dir, f\"{dp['response_id']}.json\"), dp)\n",
+    "                \n",
+    "            break; # Exiting based on the first chunk for testing purposes\n",
+    "                \n",
     "    except Exception as e:\n",
-    "        print(f\"Error: {e}\")\n",
-    "        \n",
-    "    create_json_file(os.path.join(output_dir, \"data.json\"), data)"
+    "        print(f\"Error: {e}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +445,10 @@
     "        prompt_tokens = 0\n",
     "        completion_tokens = 0    \n",
     "\n",
-    "        dp_json = json.dumps(dp, cls=CustomEncoder)\n",
+    "        dp_json = json.dumps({\n",
+    "            \"attribution\": dp[\"attribution\"],\n",
+    "            \"verbatim\": dp[\"verbatim\"]\n",
+    "        }, cls=CustomEncoder)\n",
     "        \n",
     "        # 1 - Determine any facts from the data\n",
     "        context_content = context_prompt.format(context=dp_json, facts=\"To be determined\")\n",
@@ -473,19 +496,26 @@
     "                response_format=Observations,\n",
     "                temperature=0.3,\n",
     "                top_p=0.3\n",
-    "            )            \n",
-    "        \n",
-    "        execution_time = sw.get_current_elapsed()\n",
-    "\n",
+    "            ) \n",
+    "            \n",
     "        dp_observations = observation_completion.choices[0].message.parsed.model_dump()\n",
     "        prompt_tokens += observation_completion.usage.prompt_tokens\n",
     "        completion_tokens += observation_completion.usage.completion_tokens\n",
+    "\n",
+    "        # 3 - Get similarity score between the verbatim and the observations            \n",
+    "        for observation in dp_observations[\"observations\"]:\n",
+    "            observation[\"embedding\"] = get_embedding(observation[\"short_name\"])\n",
+    "            similarity = cosine_similarity([dp[\"embedding\"]], [observation[\"embedding\"]])\n",
+    "            observation[\"similarity\"] = round(similarity[0][0], 2)\n",
+    "        \n",
+    "        execution_time = sw.get_current_elapsed()\n",
     "        \n",
     "        dp_observations[\"execution_time\"] = execution_time\n",
     "        dp_observations[\"prompt_tokens\"] = prompt_tokens\n",
     "        dp_observations[\"completion_tokens\"] = completion_tokens\n",
     "        \n",
     "        all_dp_observations.append(dp_observations)\n",
+    "        \n",
     "        create_json_file(os.path.join(classifications_output_dir, f\"{dp['response_id']}.json\"), dp_observations)"
    ]
   }
