Add README files for input and output directories and update .gitignore for data files

--- a/src/console/notebooks/cic/raw_process.ipynb
+++ b/src/console/notebooks/cic/raw_process.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,48 +28,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "# For processing with pre-determined classifications\n",
-    "classifications = f\"\"\"\n",
-    "| Classification | Description |\n",
-    "|---|---|\n",
-    "| Integration | Key issues include difficulting integrating capabilities of cloud services into solutions, ensuring seamless interoperability. |\n",
-    "| Breadth | Key issues include navigating an overwhelming range of service options. |\n",
-    "| Containers | Key issues include challenges in container orchestration, ensuring compatibility in containerized environments.\n",
-    "| Compute | Key issues include optimizing compute resources (e.g., VMs, containers, serverless) for performance and efficient resource utilization. |\n",
-    "| Ease | Key issues include steep learning curves and inconsistent user experiences with cloud services. |\n",
-    "| Portal | Key issues include cumbersome navigation, non-intuitive interfaces, and a lack of intuitive design. |\n",
-    "| High Cost / Pricing | Key issues include unexpected costs, complex pricing models, and difficulty in predicting costs. |\n",
-    "| Skill | Key issues include gaps in technical expertise, steep training requirements, and the need for specialized skills. |\n",
-    "| Customer Support | Key issues include delayed support response times, inconsistent service quality, and limited access to knowledgeable support resources.\n",
-    "| Migration | Key issues include navigating the complexities of migrating workloads between cloud providers, from on-premises environments, or hybrid environments. |\n",
-    "| Privacy | Key issues include data confidentiality concerns, compliance with data protection regulations, and ensuring data security. |\n",
-    "| Database | Key issues include database performance bottlenecks, data scalability challenges, and managing complex database configurations. |\n",
-    "| Documentation | Key issues include outdated or incomplete documentation, lack of examples, and difficulty in finding relevant information. |\n",
-    "| Getting Started | Key issues include overwhelming setup procedures, unclear onboarding processes, and lack of guidance for new users. |\n",
-    "| AI | Key issues include integration challenges with AI into existing solutions, ensuring AI models are accurate and efficient, and managing AI workloads. |\n",
-    "| Missing Features | Key issues include the absence of critical features, limitations in functionality, and gaps in service offerings. |\n",
-    "| Reliability | Key issues include service outages, inconsistent performance, and lack of redundancy in cloud services. |\n",
-    "| Innovate | Key issues include slow adoption of cutting-edge technologies, limited support for emerging features, and difficulty integrating new technologies. |\n",
-    "| Automation | Key issues include complexities in automating cloud services, ensuring automation scripts are reliable, and managing automated workflows. |\n",
-    "| Scaling | Key issues include challenges in scaling resources to meet demand, optimizing resource allocation, and ensuring performance at scale. |\n",
-    "| Lock-In | Key issues include dependency on proprietary cloud services, challenges in migrating away from cloud providers, and concerns about vendor lock-in. |\n",
-    "| Select Service | Key issues include confusion from an abundance of similar services, difficulty in selecting the right service for specific use cases, and lack of clear differentiation between services. |\n",
-    "| Networking | Key issues include complex network configurations, challenges in optimizing network performance, and managing network security. |\n",
-    "| IAM | Key issues include managing intricate identity and access management policies, ensuring secure access controls, and preventing unauthorized access. |\n",
-    "| Monitor | Key issues include setting up comprehensive observability, integrating effective logging and monitoring solutions, and ensuring timely alerts.\n",
-    "| OS | Key issues include compatibility issues with operating systems, managing OS configurations, and ensuring OS security. |\n",
-    "| Multi-Cloud | Key issues include interoperability challenges between cloud providers, managing multiple cloud environments, and ensuring consistent performance across clouds. |\n",
-    "| None | No challenges. |\n",
-    "\"\"\""
+    "classifications = [\n",
+    "    {\n",
+    "        \"classification\": \"Integration\",\n",
+    "        \"description\": \"Key issues include difficulting integrating capabilities of cloud services into solutions, ensuring seamless interoperability.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Breadth\",\n",
+    "        \"description\": \"Key issues include navigating an overwhelming range of service options.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Containers\",\n",
+    "        \"description\": \"Key issues include challenges in container orchestration, ensuring compatibility in containerized environments.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Compute\",\n",
+    "        \"description\": \"Key issues include optimizing compute resources (e.g., VMs, containers, serverless) for performance and efficient resource utilization.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Ease\",\n",
+    "        \"description\": \"Key issues include steep learning curves and inconsistent user experiences with cloud services.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Portal\",\n",
+    "        \"description\": \"Key issues include cumbersome navigation, non-intuitive interfaces, and a lack of intuitive design.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"High Cost / Pricing\",\n",
+    "        \"description\": \"Key issues include unexpected costs, complex pricing models, and difficulty in predicting costs.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Skill\",\n",
+    "        \"description\": \"Key issues include gaps in technical expertise, steep training requirements, and the need for specialized skills.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Customer Support\",\n",
+    "        \"description\": \"Key issues include delayed support response times, inconsistent service quality, and limited access to knowledgeable support resources.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Migration\",\n",
+    "        \"description\": \"Key issues include navigating the complexities of migrating workloads between cloud providers, from on-premises environments, or hybrid environments.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Privacy\",\n",
+    "        \"description\": \"Key issues include data confidentiality concerns, compliance with data protection regulations, and ensuring data security.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Database\",\n",
+    "        \"description\": \"Key issues include database performance bottlenecks, data scalability challenges, and managing complex database configurations.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Documentation\",\n",
+    "        \"description\": \"Key issues include outdated or incomplete documentation, lack of examples, and difficulty in finding relevant information.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Getting Started\",\n",
+    "        \"description\": \"Key issues include overwhelming setup procedures, unclear onboarding processes, and lack of guidance for new users.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"AI\",\n",
+    "        \"description\": \"Key issues include integration challenges with AI into existing solutions, ensuring AI models are accurate and efficient, and managing AI workloads.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Missing Features\",\n",
+    "        \"description\": \"Key issues include the absence of critical features, limitations in functionality, and gaps in service offerings.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Reliability\",\n",
+    "        \"description\": \"Key issues include service outages, inconsistent performance, and lack of redundancy in cloud services.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Innovate\",\n",
+    "        \"description\": \"Key issues include slow adoption of cutting-edge technologies, limited support for emerging features, and difficulty integrating new technologies.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Automation\",\n",
+    "        \"description\": \"Key issues include complexities in automating cloud services, ensuring automation scripts are reliable, and managing automated workflows.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Scaling\",\n",
+    "        \"description\": \"Key issues include challenges in scaling resources to meet demand, optimizing resource allocation, and ensuring performance at scale.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Lock-In\",\n",
+    "        \"description\": \"Key issues include dependency on proprietary cloud services, challenges in migrating away from cloud providers, and concerns about vendor lock-in.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Select Service\",\n",
+    "        \"description\": \"Key issues include confusion from an abundance of similar services, difficulty in selecting the right service for specific use cases, and lack of clear differentiation between services.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Networking\",\n",
+    "        \"description\": \"Key issues include complex network configurations, challenges in optimizing network performance, and managing network security.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"IAM\",\n",
+    "        \"description\": \"Key issues include managing intricate identity and access management policies, ensuring secure access controls, and preventing unauthorized access.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Monitor\",\n",
+    "        \"description\": \"Key issues include setting up comprehensive observability, integrating effective logging and monitoring solutions, and ensuring timely alerts.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"OS\",\n",
+    "        \"description\": \"Key issues include compatibility issues with operating systems, managing OS configurations, and ensuring OS security.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"Multi-Cloud\",\n",
+    "        \"description\": \"Key issues include interoperability challenges between cloud providers, managing multiple cloud environments, and ensuring consistent performance across clouds.\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"classification\": \"None\",\n",
+    "        \"description\": \"No challenges.\"\n",
+    "    }\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -86,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,50 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if len(data) == 0:    \n",
-    "    try:\n",
-    "        chunk_iterator = pd.read_csv(csv_fpath, chunksize=10)\n",
-    "        \n",
-    "        for i, df in enumerate(chunk_iterator):            \n",
-    "            for j, row in df.iterrows():\n",
-    "                attribution = [\n",
-    "                    row[\"BrandAssigned\"],\n",
-    "                    row[\"SAM11\"],\n",
-    "                    row[\"TAXALN\"],\n",
-    "                    \"Other\" if row[\"Q005\"].startswith(\"Other\") else row[\"Q005\"],\n",
-    "                    row[\"Q005_996_TEXT\"] if row[\"Q005\"].startswith(\"Other\") else \"\",\n",
-    "                    row[\"Q009_\"],\n",
-    "                    row[\"Cloud_Usage\"],\n",
-    "                    row[\"Q082\"],\n",
-    "                    row[\"Q048b\"],\n",
-    "                    \"\" if row[\"Q089a_2\"] == \"#NULL!\" else \"ISV\",\n",
-    "                    \"\" if (row[\"Q102a\"] == \"No\" or row[\"Q102a\"] == \"#NULL!\") else \"Startup\"\n",
-    "                ]\n",
-    "                \n",
-    "                dp = {\n",
-    "                    \"response_id\": row[\"ResponseId\"],\n",
-    "                    \"attribution\": \", \".join(attribution),\n",
-    "                    \"verbatim\": str(row[\"Q024b\"]),\n",
-    "                }\n",
-    "                \n",
-    "                dp[\"embedding\"] = get_embedding(dp[\"verbatim\"])\n",
-    "                data.append(dp)\n",
-    "                \n",
-    "                create_json_file(os.path.join(output_dir, f\"{dp['response_id']}.json\"), dp)\n",
-    "                \n",
-    "            break; # Exiting based on the first chunk for testing purposes\n",
-    "                \n",
-    "    except Exception as e:\n",
-    "        print(f\"Error: {e}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,14 +468,68 @@
     "            with open(os.path.join(classifications_output_dir, f), \"r\") as file:\n",
     "                dp_observations = json.load(file)\n",
     "                all_dp_observations.extend(dp_observations)\n",
-    "                processed_response_ids.append(f.split(\".\")[0])\n",
-    "                \n",
+    "                processed_response_ids.append(f.split(\".\")[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    chunk_iterator = pd.read_csv(csv_fpath, chunksize=10)\n",
+    "    \n",
+    "    skip_chunks = 0\n",
+    "    for _ in range(skip_chunks):\n",
+    "        next(chunk_iterator, None)\n",
+    "        \n",
+    "    df = next(chunk_iterator, None)\n",
+    "    if df is not None:\n",
+    "        for j, row in df.iterrows():\n",
+    "            if row[\"ResponseId\"] in processed_response_ids:\n",
+    "                continue\n",
+    "            \n",
+    "            attribution = [\n",
+    "                row[\"BrandAssigned\"],\n",
+    "                row[\"SAM11\"],\n",
+    "                row[\"TAXALN\"],\n",
+    "                \"Other\" if row[\"Q005\"].startswith(\"Other\") else row[\"Q005\"],\n",
+    "                row[\"Q005_996_TEXT\"] if row[\"Q005\"].startswith(\"Other\") else \"\",\n",
+    "                row[\"Q009_\"],\n",
+    "                row[\"Cloud_Usage\"],\n",
+    "                row[\"Q082\"],\n",
+    "                row[\"Q048b\"],\n",
+    "                \"\" if row[\"Q089a_2\"] == \"#NULL!\" else \"ISV\",\n",
+    "                \"\" if (row[\"Q102a\"] == \"No\" or row[\"Q102a\"] == \"#NULL!\") else \"Startup\"\n",
+    "            ]\n",
+    "            \n",
+    "            dp = {\n",
+    "                \"response_id\": row[\"ResponseId\"],\n",
+    "                \"attribution\": \", \".join(attribution),\n",
+    "                \"verbatim\": str(row[\"Q024b\"]),\n",
+    "            }\n",
+    "            \n",
+    "            dp[\"embedding\"] = get_embedding(dp[\"verbatim\"])\n",
+    "            data.append(dp)\n",
+    "            \n",
+    "            create_json_file(os.path.join(output_dir, f\"{dp['response_id']}.json\"), dp)\n",
+    "except Exception as e:\n",
+    "    print(f\"Error: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "filtered_data = [d for d in data if d[\"response_id\"] not in processed_response_ids]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +579,7 @@
     "        else:\n",
     "            # 2 - Classify the input data based on the provided classifications\n",
     "            execute_messages = [\n",
-    "                ChatCompletionSystemMessageParam(role=\"system\", content=classify_prompt.format(classifications=classifications)),\n",
+    "                ChatCompletionSystemMessageParam(role=\"system\", content=classify_prompt.format(classifications=json.dumps(classifications))),\n",
     "                ChatCompletionUserMessageParam(role=\"user\", content=context_content)\n",
     "            ]\n",
     "            \n",
